# Learn more at <https://github.com/carlosperate/awesome-pyprojevaluefragmentsct>
# Cool info <https://blog.pilosus.org/posts/2019/12/26/python-third-party-tools-configuration/>
#https://setuptools.readthedocs.io/en/latest/build_meta.html
#https://peps.python.org/pep-0621/
[tool.poetry]
name = "valuefragments"
version = "0.3.28"
description = "Testing installation of Package"
authors = ["Ebeling, Dr. Bastian <bastian.ebeling@web.de>"]

[tool.poetry.extras]
allfeatures = ["psutil", "hashlib", "icecream", "cpu_load_generator"]

[tool.poetry.group.dev.dependencies]
pyanalyze = "^0.9.0"
types-psutil = "^5.9.5.11"
ruff = "^0.0.286"
retype = "^22.8.0"
infer-types = "^1.0.0"
pyannotate = "^1.2.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
#include_package_data = true
#packages = "find:"
#package_dir = "src"
#### explicitly not coverred
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
#mypkg = ["*.txt", "*.rst"]
"*" = ["py.typed"]

[tool.ruff]
line-length = 99

# https://github.com/hhatto/autopep8/blob/master/README.rst#pyproject-toml
[tool.autopep8]
max_line_length = 99
in-place = true
recursive = true
jobs = 0

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 99
target-version = ['py311'] #'py37', 'py38',
color = true
safe = true

#force-exlude = ".*/venv/.*"
[tool.darker]
revision = "main"
diff = true
check = true
isort = true
lint = ["pylint", "mypy", "flake8"]
log_level = "INFO"

[tool.ufmt]

[tool.vulture]
#verbose = true
min_confidence = 61

[tool.pylint.format]
max-line-length = "99"

#[tool.flake8]
#max-line-length = 99
#extend-ignore = "E203"
# https://interrogate.readthedocs.io/en/latest/#configuration
[tool.interrogate]
color = true
generate_badge = "."
verbose = 2

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options
#extend_skip = ["venv"]
py_version = 311
color_output = true
profile = 'black'

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "*"

[tool.poetry.dependencies.joblib]
version = "*"
optional = true

[tool.poetry.dependencies.cpu-load-generator]
version = "*"
optional = true

[tool.poetry.dependencies.hashlib]
version = "*"
python = "2.*"
optional = true

[tool.poetry.dependencies.icecream]
version = "*"
optional = true

[tool.poetry.dependencies.psutil]
version = "*"
optional = true

[tool.poetry.dev-dependencies]
autopep8 = "*"
bandit = "^1.7.4"
build = "*"
cpu-load-generator = "*"
flake8 = ">5"
icecream = "*"
interrogate = ">=1.5"
joblib = "^1.2.0"
mccabe = "*"
pep257 = "*"
pep8 = "*"
pyanalyze = "^0.9.0"
pycodestyle = ">2.9"
pydocstyle = ">=6.3.0"
pyflakes = ">2"
pyleft = "*"
pylint = "*"
pyre-check = "*"
pyright = "*"
pyroma = "^4.1"
pytest = "*"
radon = "*"
setuptools = ">=65.5.1"
toml = "*"
ufmt = "*"
vermin = ">=1.5"
yapf = "*"

[tool.poetry.dev-dependencies.black]
version = ">22"
allow-prereleases = true

[tool.poetry.dev-dependencies.pylama]
extras = ["all"]
version = ">8.4"

[tool.poetry.dev-dependencies.isort]
version = "*"
extras = ["colors"]

[tool.prospector]
without_tool = "django"

# [tool.poetry.dev-dependencies.mypy]
# git = "https://github.com/python/mypy.git"
# version = "^1"
# allow-prereleases = true
[tool.poetry.dev-dependencies.prospector]
version = ">1.5"
# extras = ["with_everything"]
# better see <https://prospector.landscape.io/en/master/supported_tools.html>
extras = [
  "with_pyroma",
  "with_vulture",
  "with_frosted",
  "with_mypy",
  "with_bandit",
]

[tool.poetry.dev-dependencies.pytype]
version = ">=2022.09.27"
python = "~3.10"

#[pylama.pep8]
#max_line_length = 99
[tool.pylint.main]
jobs = 0
py-version = "3.10"
output-format = "colorized"

[tool.pylint.basic]
include-naming-hint = "y"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
include = ["src/valuefragments"]
exclude = ["**/node_modules", "**/__pycache__", "**/.venv"]
#ignore = ["src/oldstuff"]
#defineConstant = { DEBUG = true }
#stubPath = "src/stubs"
#venv = "env367"
pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.pylama]
linters = [""] # means all
#linters = ["mypy,pycodestyle,pydocstyle,pyflakes,pylint,isort"]
verbose = true
concurrent = true
max_line_length = 99

[tool.pylint."MESSAGES CONTROL"]
disable = "duplicate-code"

[tool.pytest.ini_options]
minversion = "6.2"
testpaths = ["src"]
required_plugins = ["typeguard", "pylama"]
addopts = [
  "--verbose",
  #    "--pylama",
  "--cache-clear",
  "--color=yes",
  #    "--typeguard-packages=valuefragments",

]

[tool.towncrier]

#https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
enable_incomplete_feature = ["TypeVarTuple", "Unpack"]
pretty = true
show_error_codes = true
show_error_context = true
#strict = true
install_types = true
non_interactive = true

[[tool.mypy.overrides]]
module = 'cpu_load_generator'
ignore_missing_imports = true
implicit_reexport = true

[[tool.mypy.overrides]]
module = [
  "icecream",
  "joblib.externals.loky",
  "joblib.externals.loky.process_executor",
]
ignore_missing_imports = true
implicit_reexport = true
