[build-system]
requires = ["Cython", "setuptools>=61.0", "numpy", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valuefragments"
version = "0.9.2"
description = "A library for handling value fragments with high precision and efficiency."
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = {text = "MIT"}
authors = [{ name = "Dr. Bastian Ebeling", email = "bastian.ebeling@web.de" }]
dependencies = [
    "lxml",
    "requests",
    "typing-extensions",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-bandit",
    "pytest-beartype",
    #"pytest-black",
    "pytest-colordots",
    "pytest-cov",
    "pytest-monkeytype",
    "pytest-mypy",
    "pytest-pyright",
    "pytest-sugar",
    "ruff",
    "mypy",
    "nox",
    "asv",
    "typeguard",
]

allfeatures = [
    "pytest",
    "pytest-asyncio",
    "pytest-bandit",
    "pytest-beartype",
    #"pytest-black",
    "pytest-colordots",
    "pytest-cov",
    "pytest-monkeytype",
    "pytest-mypy",
    "pytest-pyright",
    "pytest-sugar",
    "ruff",
    "mypy",
    "nox",
    "asv",
    "lxml",
    "requests",
    "typeguard",
]

[tool.setuptools]
package-dir = {"" = "src"}
[tool.setuptools.package-data]
"valuefragments" = ["py.typed"]
[tool.setuptools.packages.find]
where = ["src"]

# Erhalt der spezifischen C-Extension Konfiguration für mathhelpers
#[tool.setuptools.ext-modules]
#mathhelpers = { sources = ["src/valuefragments/mathhelpers.pyx"] }

# --- TOOLING KONFIGURATION ---

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# E: Error, F: Pyflakes, I: Isort, W: Warning, B: flake8-bugbear, C90: Complexity
select = ["E", "F", "I", "W", "B", "C90"]
ignore = ["E501"] # Line too long (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["valuefragments"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--strict-markers",
  "--verbose",
  "--cov=src/pyvaluefragments",
  "--cov-report=term-missing",
  "--typeguard-packages=pyvaluefragments",
  "--color=yes",
#  "--ignore=src/tests/test_numpy_scalar_interval.py"
  ]
required_plugins = ["pytest-cov", "typeguard", "pytest-sugar","pytest-mypy","pytest-pyright"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 80