
# https://setuptools.readthedocs.io/en/latest/userguide/quickstart.html
# https://setuptools.readthedocs.io/en/latest/build_meta.html

[metadata]
#https://setuptools.readthedocs.io/en/latest/references/keywords.html
name = valuefragments
version = 0.0.1
url = https://github.com/Barry1/PyValueFragments
description = Testing installation of Package
author = Ebeling. Dr. Bastian
author_email = bastian.ebeling@web.de
license = tbd later
zip_safe = True

[options]
packages = find:

[options.extras_require]
ALLFEATURES =
    psutil
    hashlib
    cpu_load_generator
    resource;platform_system=='Linux'
