# Cool info <https://blog.pilosus.org/posts/2019/12/26/python-third-party-tools-configuration/>

# https://setuptools.readthedocs.io/en/latest/userguide/quickstart.html
# https://setuptools.readthedocs.io/en/latest/build_meta.html
#https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html#declarative-config
[metadata]
#https://setuptools.readthedocs.io/en/latest/references/keywords.html
name = valuefragments
version = 0.0.2
url = https://github.com/Barry1/PyValueFragments
description = Testing installation of Package
author = Ebeling. Dr. Bastian
author_email = bastian.ebeling@web.de
#license = tbd later
zip_safe = True
provides = valuefragments
keywords = decorator, helper, fragments, contextmanagers
requires = typing_extensions

[options]
packages = find:
package_dir =
    =src
#packages = valuefragments
[options.packages.find]
where = src

[options.extras_require]
ALLFEATURES =
    psutil
    hashlib
    icecream
    cpu_load_generator
#    resource;platform_system=='Linux'
[pylama]
format = pylint
#skip = */.tox/*,*/.env/*
#linters = pylint,mccabe,pycodestyle,pydocstyle,pyflakes,radon,gjslint,eradicate
linters = mccabe,pep257,pydocstyle,pep8,pycodestyle,pyflakes,radon,pylint,mypy,isort
ignore=D203,D213
[pylama:isort]
profile = "black"
[pylama:mypy]
strict = true
show-error-codes = true

[pylama:pydocstyle]
#builtins = _
[pylama:pyflakes]
#builtins = _

[pylama:pycodestyle]
max_line_length = 88

[pylama:pylint]
max_line_length = 88
#disable = R
[pylama:pep8]
max_line_length=88
