# Cool info <https://blog.pilosus.org/posts/2019/12/26/python-third-party-tools-configuration/>

# https://setuptools.readthedocs.io/en/latest/userguide/quickstart.html
# https://setuptools.readthedocs.io/en/latest/build_meta.html
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html#declarative-config
# https://github.com/sigmavirus24/rush/blob/d2a56c8abee312cda1d5b059b597a3683c6732cc/setup.cfg
[metadata]
#https://setuptools.readthedocs.io/en/latest/references/keywords.html
name = valuefragments
version = 0.1.9
url = https://github.com/Barry1/PyValueFragments
#license = tbd later
zip_safe = True
provides = valuefragments
#keywords = decorator, helper, fragments, contextmanagers
requires = typing_extensions
# https://setuptools.pypa.io/en/latest/userguide/datafiles.html
#install_requires=>=3.10
#packages = valuefragments
#    resource;platform_system=='Linux'
[pylama]
format = pylint
#skip = */.tox/*,*/.env/*
linters = mccabe,pep257,pydocstyle,pep8,pycodestyle,pyflakes,radon,pylint,mypy,isort,eradicate
#,vulture
ignore=D203,D213
[pylama:isort]
profile = black
py_version = 310
[pylama:black]
target_version = py310
[pylama:mypy]
strict = true
show-error-codes = true
python_version = 3.10
[pylama:pydocstyle]
convention = pep257
#builtins = _
[pylama:pyflakes]
#builtins = _

[pylama:pycodestyle]
max_line_length = 79

[pylama:pylint]
max_line_length = 79
#disable = R
[pylama:pep8]
max_line_length=79
